--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
                 <div class="d-flex justify-content-between"><a href="#" class="text-white d-block py-1 social-link"><i class="fa-solid fa-square-rss"></i>&nbsp;&nbsp;&nbsp;RSS.com</a><span class="text-white">&rarr;</span></div>
                 <hr class="text-white mt-2">
 
-                <a href="#" class="ms-4 custom-footer-link d-block" style="margin-top: 110px;">@ 2025 Kivzo. Designed by Nabid.</a>
+                <a href="#" class="ms-4 custom-footer-link d-block" style="margin-top: 110px;">&copy; 2025 Kivzo. Designed by Nabid.</a>
             </div>
         </div>
     </div>
