--- a/index.html
+++ b/index.html
@@ -355,10 +355,10 @@
 
     <div class="container my-5">
         <div class="position-relative rounded overflow-hidden">
-            <!-- Background Image -->
+
             <img src="/images/n18.webp" class="img-fluid w-100" style="height: 400px;" alt="Ad banner">
 
-            <!-- Overlay -->
+
             <div class="position-absolute bottom-0 start-0 w-100 p-4 d-flex flex-column flex-md-row justify-content-between align-items-center"
                 style="background: rgba(0, 0, 0, 0.5);">
                 <div class="text-white mb-3 mb-md-0">
@@ -475,11 +475,14 @@
     <div class="container">
         <div class="row">
             <div class="col-md-8 bg-black pt-5">
-                <h1 class="h5 text-white">Stay updated with the latest news, stories, and insights from around the globe.</h1>
+                <h1 class="h5 text-white">Stay updated with the latest news, stories, and insights from around the
+                    globe.</h1>
                 <div class="search-box d-flex mt-3">
                     <input type="text" class="form-control rounded-pill w-50" placeholder="Enter your e-mail...">
-                    <a class="ps-3 pe-3 pt-2 pb-2 ms-3 search-box-btn text-black text-decoration-none news rounded-pill fw-bold">SUBSCRIBE NOW</a>
-                </div> 
+                    <a
+                        class="ps-3 pe-3 pt-2 pb-2 ms-3 search-box-btn text-black text-decoration-none news rounded-pill fw-bold">SUBSCRIBE
+                        NOW</a>
+                </div>
                 <hr class="text-white mt-5">
                 <div class="row mt-5">
                     <div class="col-md-4">
@@ -522,21 +525,34 @@
 
             <div class="col-md-3 bg-black pt-5">
                 <div class="d-flex justify-content-between">
-                <a href="#" class="text-white d-block py-1 social-link"><i class="fa-brands fa-square-facebook"></i>&nbsp;&nbsp;&nbsp;Facebook</a><span class="text-white">&rarr;</span>
+                    <a href="#" class="text-white d-block py-1 social-link"><i
+                            class="fa-brands fa-square-facebook"></i>&nbsp;&nbsp;&nbsp;Facebook</a><span
+                        class="text-white">&rarr;</span>
                 </div>
                 <hr class="text-white mt-2">
-                <div class="d-flex justify-content-between"><a href="#" class="text-white d-block py-1 social-link"><i class="fa-brands fa-square-youtube"></i>&nbsp;&nbsp;&nbsp;YouTube</a><span class="text-white">&rarr;</span></div>
+                <div class="d-flex justify-content-between"><a href="#" class="text-white d-block py-1 social-link"><i
+                            class="fa-brands fa-square-youtube"></i>&nbsp;&nbsp;&nbsp;YouTube</a><span
+                        class="text-white">&rarr;</span></div>
                 <hr class="text-white mt-2">
-                <div class="d-flex justify-content-between"><a href="#" class="text-white d-block py-1 social-link"><i class="fa-brands fa-square-instagram"></i>&nbsp;&nbsp;&nbsp;Instagram</a><span class="text-white">&rarr;</span></div>
+                <div class="d-flex justify-content-between"><a href="#" class="text-white d-block py-1 social-link"><i
+                            class="fa-brands fa-square-instagram"></i>&nbsp;&nbsp;&nbsp;Instagram</a><span
+                        class="text-white">&rarr;</span></div>
                 <hr class="text-white mt-2">
-                <div class="d-flex justify-content-between"><a href="#" class="text-white d-block py-1 social-link"><i class="fa-brands fa-square-x-twitter"></i>&nbsp;&nbsp;&nbsp;Twitter</a><span class="text-white">&rarr;</span></div>
+                <div class="d-flex justify-content-between"><a href="#" class="text-white d-block py-1 social-link"><i
+                            class="fa-brands fa-square-x-twitter"></i>&nbsp;&nbsp;&nbsp;Twitter</a><span
+                        class="text-white">&rarr;</span></div>
                 <hr class="text-white mt-2">
-                <div class="d-flex justify-content-between"><a href="#" class="text-white d-block py-1 social-link"><i class="fa-brands fa-square-reddit"></i>&nbsp;&nbsp;&nbsp;Reddit</a><span class="text-white">&rarr;</span></div>
+                <div class="d-flex justify-content-between"><a href="#" class="text-white d-block py-1 social-link"><i
+                            class="fa-brands fa-square-reddit"></i>&nbsp;&nbsp;&nbsp;Reddit</a><span
+                        class="text-white">&rarr;</span></div>
                 <hr class="text-white mt-2">
-                <div class="d-flex justify-content-between"><a href="#" class="text-white d-block py-1 social-link"><i class="fa-solid fa-square-rss"></i>&nbsp;&nbsp;&nbsp;RSS.com</a><span class="text-white">&rarr;</span></div>
+                <div class="d-flex justify-content-between"><a href="#" class="text-white d-block py-1 social-link"><i
+                            class="fa-solid fa-square-rss"></i>&nbsp;&nbsp;&nbsp;RSS.com</a><span
+                        class="text-white">&rarr;</span></div>
                 <hr class="text-white mt-2">
 
-                <a href="#" class="ms-4 custom-footer-link d-block" style="margin-top: 110px;">&copy; 2025 Kivzo. Designed by Nabid.</a>
+                <a href="#" class="ms-4 custom-footer-link d-block" style="margin-top: 110px;">&copy; 2025 Kivzo.
+                    Designed by Nabid.</a>
             </div>
         </div>
     </div>
